apps/nexus-terminal/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nexus-terminal
  namespace: nexus-terminal
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nexus.cyphers.app`)
      middlewares:
        - name: authentik-auth
          namespace: authentik
        - name: default-headers
          namespace: traefik
      services:
        - name: nexus-terminal-web
          port: 80
    # - kind: Rule
    #   match: Host(`nexus.cyphers.app`) && PathPrefix(`/api`)
    #   middlewares:
    #     - name: default-headers
    #       namespace: traefik
    #   services:
    #     - name: nexus-terminal-api
    #       port: 8000
    - kind: Rule
      match: Host(`nexus-docs.cyphers.app`)
      middlewares:
        - name: authentik-auth
          namespace: authentik
        - name: default-headers
          namespace: traefik
      services:
        - name: nexus-terminal-docs
          port: 80
  tls:
    secretName: production-cyphers-app-tls
